// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within userGroupsSelectors the selectors match their snapshots for the includedSourceUserGroupsSelector 1`] = `
[
  {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": [],
    "workspaceId": "1001",
  },
]
`;

exports[`within userGroupsSelectors the selectors match their snapshots for the sourceUserGroupsForTransferSelector 1`] = `
[
  {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": [],
    "workspaceId": "1001",
  },
]
`;

exports[`within userGroupsSelectors the selectors match their snapshots for the sourceUserGroupsInActiveWorkspaceSelector 1`] = `
[
  {
    "entryCount": 0,
    "id": "5001",
    "isIncluded": false,
    "linkedId": "clock-user-group-01",
    "memberOf": "userGroups",
    "name": "Test Group A",
    "userIds": [],
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": [],
    "workspaceId": "1001",
  },
]
`;
